--- a/frontend/package.json
+++ b/frontend/package.json
@@ -31,7 +31,7 @@
     "test:coverage": "run-s test:lint test:type-check test:jest:coverage test:cypress-ci:coverage coverage:merge",
     "test:fix": "eslint --ext .js,.ts,.jsx,.tsx ./src --fix",
     "test:lint": "eslint --max-warnings 0 --ext .js,.ts,.jsx,.tsx ./src",
-    "test:type-check": "tsc --noEmit && cd ./src/__tests__/cypress && tsc --noEmit",
+    "test:type-check": "tsc --noEmit",
     "test:jest": "jest",
     "test:jest:coverage": "rimraf jest-coverage && jest --silent --coverage --coverageReporters=json --coverageReporters=lcov",
     "test:unit": "npm run test:jest -- --silent",
@@ -40,11 +40,11 @@
     "coverage:merge": "rimraf coverage && istanbul-merge --out coverage/coverage-final.json jest-coverage/coverage-final.json src/__tests__/cypress/coverage/coverage-final.json && nyc report --reporter html -t coverage --report-dir coverage/report && nyc report --reporter json-summary -t coverage --report-dir coverage",
     "cypress:open": "cypress open --project src/__tests__/cypress",
     "cypress:run": "cypress run -b chrome --project src/__tests__/cypress",
-    "cypress:open:mock": "CY_MOCK=1 CY_WS_PORT=9002 npm run cypress:open -- ",
-    "cypress:run:mock": "CY_MOCK=1 CY_WS_PORT=9002 npm run cypress:run -- ",
-    "cypress:run:mock:coverage": "rimraf src/__tests__/cypress/coverage src/__tests__/cypress/.nyc_output && CY_COVERAGE=true npm run cypress:run:mock",
-    "cypress:open:record": "CY_RECORD=1 npm run cypress:open",
-    "cypress:run:record": "CY_RECORD=1 npm run cypress:run && npm run cypress:format",
+    "cypress:open:mock": "MOCK=1 WS_PORT=9002 npm run cypress:open -- ",
+    "cypress:run:mock": "MOCK=1 WS_PORT=9002 npm run cypress:run -- ",
+    "cypress:run:mock:coverage": "rimraf src/__tests__/cypress/coverage src/__tests__/cypress/.nyc_output && COVERAGE=true npm run cypress:run:mock",
+    "cypress:open:record": "RECORD=1 npm run cypress:open",
+    "cypress:run:record": "RECORD=1 npm run cypress:run && npm run cypress:format",
     "cypress:server:build": "ODH_DIST_DIR=./public-cypress POLL_INTERVAL=9999999 FAST_POLL_INTERVAL=9999999 WS_HOSTNAME=localhost:9002 npm run build",
     "cypress:server:build:coverage": "COVERAGE=true npm run cypress:server:build",
     "cypress:server": "serve ./public-cypress -p 9001 -s -L",
@@ -52,25 +52,22 @@
     "cypress:format": "prettier --write src/__tests__/**/*.snap.json"
   },
   "dependencies": {
-    "@monaco-editor/react": "^4.6.0",
     "@openshift/dynamic-plugin-sdk": "^4.0.0",
     "@openshift/dynamic-plugin-sdk-utils": "^4.0.1",
-    "@patternfly/patternfly": "^5.4.0",
-    "@patternfly/quickstarts": "^5.3.0",
+    "@patternfly/patternfly": "^5.2.1",
+    "@patternfly/quickstarts": "^5.1.0",
     "@patternfly/react-catalog-view-extension": "^5.0.0",
-    "@patternfly/react-charts": "^7.4.0",
-    "@patternfly/react-code-editor": "^5.4.0",
-    "@patternfly/react-core": "^5.4.1",
-    "@patternfly/react-drag-drop": "^5.4.0",
-    "@patternfly/react-icons": "^5.4.0",
-    "@patternfly/react-log-viewer": "^5.3.0",
-    "@patternfly/react-styles": "^5.4.0",
-    "@patternfly/react-table": "^5.4.0",
-    "@patternfly/react-templates": "^1.1.0",
-    "@patternfly/react-tokens": "^5.4.0",
-    "@patternfly/react-topology": "^5.4.0",
-    "@patternfly/react-virtualized-extension": "^5.1.0",
-    "@segment/analytics-next": "^1.72.0",
+    "@patternfly/react-charts": "^7.1.1",
+    "@patternfly/react-code-editor": "^5.2.1",
+    "@patternfly/react-core": "^5.2.1",
+    "@patternfly/react-drag-drop": "^5.3.3",
+    "@patternfly/react-icons": "^5.2.1",
+    "@patternfly/react-log-viewer": "^5.2.0",
+    "@patternfly/react-styles": "^5.2.1",
+    "@patternfly/react-table": "^5.2.1",
+    "@patternfly/react-tokens": "^5.2.1",
+    "@patternfly/react-topology": "^5.4.0-prerelease.6",
+    "@patternfly/react-virtualized-extension": "^5.0.0",
     "@types/classnames": "^2.3.1",
     "axios": "^1.6.4",
     "classnames": "^2.2.6",
@@ -79,13 +76,12 @@
     "google-protobuf": "^3.11.2",
     "grpc-web": "^1.2.1",
     "lodash-es": "^4.17.15",
-    "long": "^5.2.3",
-    "monaco-editor": "^0.50.0",
-    "monaco-editor-webpack-plugin": "^7.1.0",
+    "monaco-editor": "^0.31.1",
+    "monaco-editor-webpack-plugin": "^7.0.1",
     "react": "^18.2.0",
     "react-cool-dimensions": "^2.0.5",
     "react-dom": "^18.2.0",
-    "react-dropzone": "^14.2.3",
+    "react-monaco-editor": "^0.51.0",
     "react-redux": "^8.0.4",
     "react-router": "^6.4.1",
     "react-router-dom": "^6.4.1",
@@ -97,6 +93,8 @@
   },
   "devDependencies": {
     "@babel/core": "^7.21.0",
+    "@jsdevtools/coverage-istanbul-loader": "^3.0.5",
+    "@types/chai-subset": "^1.3.5",
     "@types/dompurify": "^2.2.6",
     "@types/google-protobuf": "^3.7.2",
     "@types/js-yaml": "^4.0.6",
@@ -108,31 +106,39 @@
     "@types/react-router-dom": "^5.3.3",
     "@types/showdown": "^2.0.3",
     "@types/ws": "^8.5.10",
+    "@typescript-eslint/eslint-plugin": "^7.1.1",
+    "@typescript-eslint/parser": "^7.1.1",
     "babel-loader": "^8.3.0",
     "babel-plugin-transform-imports": "^2.0.0",
-    "concurrently": "^8.2.2",
+    "chai-subset": "^1.6.0",
     "copy-webpack-plugin": "^12.0.2",
+    "concurrently": "^8.2.2",
     "core-js": "^3.37.1",
     "css-loader": "^5.2.7",
     "css-minimizer-webpack-plugin": "^4.2.2",
     "dotenv": "^8.2.0",
     "dotenv-expand": "^5.1.0",
     "dotenv-webpack": "^6.0.0",
+    "expect": "^29.7.0",
     "file-loader": "^6.1.1",
     "html-webpack-plugin": "^5.5.0",
+    "http-server": "^14.1.1",
     "imagemin": "^7.0.0",
+    "istanbul-merge": "^2.0.0",
     "js-yaml-loader": "^1.2.2",
+    "junit-report-merger": "^7.0.0",
     "mini-css-extract-plugin": "^2.7.2",
+    "mocha-junit-reporter": "^2.2.1",
     "monaco-editor-webpack-plugin": "^7.0.1",
     "npm-run-all": "^4.1.5",
     "null-loader": "^4.0.1",
+    "nyc": "^15.1.0",
     "prettier": "^2.1.2",
-    "protobufjs": "^7.3.2",
     "raw-loader": "^4.0.2",
     "regenerator-runtime": "^0.13.7",
     "rimraf": "^3.0.2",
     "sass-loader": "^13.2.0",
-    "slnodejs": "^6.1.910",
+    "serve": "^14.2.1",
     "style-loader": "^2.0.0",
     "svg-url-loader": "^6.0.0",
     "terser-webpack-plugin": "^5.3.6",
@@ -141,7 +147,8 @@
     "typescript": "^5.3.3",
     "url-loader": "^4.1.1",
     "victory-core": "^36.8.3",
-    "webpack": "^5.94.0",
+    "wait-on": "^7.2.0",
+    "webpack": "^5.76.0",
     "webpack-bundle-analyzer": "^4.7.0",
     "webpack-cli": "^4.10.0",
     "webpack-dev-server": "^4.11.1",
@@ -152,22 +159,17 @@
     "@babel/preset-react": "^7.18.6",
     "@babel/preset-typescript": "^7.21.5",
     "@cypress/code-coverage": "^3.12.34",
-    "@jsdevtools/coverage-istanbul-loader": "^3.0.5",
+    "cypress": "^13.10.0",
+    "cypress-axe": "^1.5.0",
+    "cypress-high-resolution": "^1.0.0",
+    "cypress-mochawesome-reporter": "^3.8.2",
+    "cypress-multi-reporters": "^1.6.4",
     "@testing-library/cypress": "^10.0.1",
     "@testing-library/dom": "^9.3.4",
     "@testing-library/jest-dom": "^6.3.0",
     "@testing-library/react": "^14.0.0",
     "@testing-library/user-event": "^14.5.2",
-    "@types/chai-subset": "^1.3.5",
     "@types/jest": "^28.1.8",
-    "@typescript-eslint/eslint-plugin": "^7.1.1",
-    "@typescript-eslint/parser": "^7.1.1",
-    "chai-subset": "^1.6.0",
-    "cypress": "^13.14.2",
-    "cypress-axe": "^1.5.0",
-    "cypress-high-resolution": "^1.0.0",
-    "cypress-mochawesome-reporter": "^3.8.2",
-    "cypress-multi-reporters": "^1.6.4",
     "eslint": "^8.57.0",
     "eslint-config-prettier": "^8.6.0",
     "eslint-import-resolver-node": "^0.3.7",
@@ -180,18 +182,10 @@
     "eslint-plugin-prettier": "^4.2.1",
     "eslint-plugin-react": "^7.32.2",
     "eslint-plugin-react-hooks": "^4.6.0",
-    "expect": "^29.7.0",
-    "http-server": "^14.1.1",
-    "istanbul-merge": "^2.0.0",
     "jest": "^28.1.3",
     "jest-environment-jsdom": "^29.4.3",
-    "junit-report-merger": "^7.0.0",
-    "mocha-junit-reporter": "^2.2.1",
     "npm-run-all": "^4.1.5",
-    "nyc": "^15.1.0",
-    "serve": "^14.2.1",
-    "ts-jest": "^28.0.8",
-    "wait-on": "^7.2.0"
+    "ts-jest": "^28.0.8"
   },
   "overrides": {
     "@openshift/dynamic-plugin-sdk-utils": {
@@ -203,6 +197,8 @@
     "@patternfly/react-topology": {
       "react": "^18.2.0"
     },
-    "ws": "^8.17.1"
+    "react-monaco-editor": {
+      "monaco-editor": "^0.31.1"
+    }
   }
 }
